# senkeidaisu

./: CMakeLists.txt  README.md
include/: declarations.hpp  dense.hpp  densematrices.hpp  lin_reg.hpp  matrix.hpp  senkeidaisu.hpp  sparse.hpp  sparsematrices.hpp
src/: dmatreal.hpp  main.cpp  matreal.hpp  smatreal.hpp
